objects/ts_Skill_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <formula>Skill__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Skill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunity Skill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Skill Assignments</relationshipLabel>
        <relationshipName>Skill_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Skill_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Skill</label>
        <referenceTo>ts_Skill__c</referenceTo>
        <relationshipLabel>Skill Assignments</relationshipLabel>
        <relationshipName>Skill_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Skill Assignment</label>
    <nameField>
        <displayFormat>SAN-{0000}</displayFormat>
        <label>Skill Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Assignments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>